manifests/register.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vcluster-runasuser-plugin
webhooks:
  - name: runasuser.vcluster.svc
    clientConfig:
      url: "https://127.0.0.1:8765/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMekNDQWhlZ0F3SUJBZ0lVWCt6Mlh2THAxVFViU3FmN2NXektOUjRPd2c4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0p6RWxNQ01HQTFVRUF3d2NkbU5zZFhOMFpYSXRjblZ1WVhOMWMyVnlMWEJzZFdkcGJpQkRRVEFlRncweQpNakExTURreE5qSTBNemxhRncwek1qQTFNRFl4TmpJME16bGFNQ2N4SlRBakJnTlZCQU1NSEhaamJIVnpkR1Z5CkxYSjFibUZ6ZFhObGNpMXdiSFZuYVc0Z1EwRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRRFRLbVg0WXIyOFJ6Mi9BODFyZ0VvR1NkQWxzOW52TVUyU0p0aVVGTkdWbGdENnJUSDNVSFAvbEQ3MgpUK0JiWkNLQ3Q [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
    admissionReviewVersions: ["v1"]
    sideEffects: None
